fix: horizontal scroll got hidden on firefox

--- a/src/scss/filejet-scss/dashboard/_new-dashboard.scss
+++ b/src/scss/filejet-scss/dashboard/_new-dashboard.scss
@@ -814,7 +814,7 @@
 
 		@-moz-document url-prefix() {
 			.dataTables_scroll .dataTables_scrollBody {
-				overflow: hidden !important;
+				overflow-y: hidden !important;
 			}
 		}
 
